# vjot

./: .gitignore  README.md  pyproject.toml  workon
demos/: demo_mp3path4stamp.sh
practice/: playjot.vim  txtfile  voice.acc
sample/: 20200923T193234.ws852.mp3.txt  20200923T193330.ws852.mp3.txt  20200923T195906.ws852.mp3.txt  20200924T192626.ws852.mp3.txt  metadata.py  stamps
tests/: conftest.py  test_stamp.py  test_verify_sample.py
tests/sample/: 20200924T191636.ws852.mp3.txt
vjot/: __init__.py  constants.py  misc.py  stamp.py
